app content left align fix

--- a/src/common/style/app.scss
+++ b/src/common/style/app.scss
@@ -7,3 +7,7 @@
   padding-left: 15px;
   padding-right: 15px;
 }
+
+.app__content .container {
+  margin-left: 0;
+}
